# Extension_RAG

./: .gitignore  License.txt  README.md  requirements.txt
Backend/: cleaned_content.txt  main.py  test.py
Backend/output/: cleaned_text.txt  text.txt
Backend/text_processor_crew/: README.md  pyproject.toml
Backend/text_processor_crew/src/text_processor_crew/: crew.py  main.py
Backend/text_processor_crew/src/text_processor_crew/config/: agents.yaml  tasks.yaml
Extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
