[project]
name = "text_processor_crew"
version = "0.1.0"
description = "Text_Processor_Crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
text_processor_crew = "text_processor_crew.main:run"
run_crew = "text_processor_crew.main:run"
train = "text_processor_crew.main:train"
replay = "text_processor_crew.main:replay"
test = "text_processor_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
